make toolbox and smart work on jdk8 and windows